Renamed model Transaction to TransactionHistory, fixed models

--- a/test/fixtures/card_transactions.yml
+++ b/test/fixtures/card_transactions.yml
@@ -2,8 +2,8 @@
 
 one:
   card: one
-  transaction: one
+  transaction_history: one
 
 two:
   card: two
-  transaction: two
+  transaction_history: two
