--- a/test/fixtures/transaction_histories.yml
+++ b/test/fixtures/transaction_histories.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  transaction_date: 2018-08-13 18:39:01
   complete: false
   amount: 9.99
-  porcentual_commission: 9.99
-  fixed_commission: 9.99
+  porcentual_comission: 9.99
+  fixed_comission: 9.99
+  wallet: one
   transaction_type: one
 
 two:
-  transaction_date: 2018-08-13 18:39:01
   complete: false
   amount: 9.99
-  porcentual_commission: 9.99
-  fixed_commission: 9.99
+  porcentual_comission: 9.99
+  fixed_comission: 9.99
+  wallet: two
   transaction_type: two
